refactor: rename SFTP into FTPS
Clarification: as connections are made over TLS and not SSH, the app
is renamed and all occurences of SFTP are changed into FTPS
