# server/docs/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
-  title: sftp-app
-  description: SFTP management.
+  title: ftps-app
+  description: FTPS management.
   license:
     name: GPL-3.0-or-later
     url: https://www.gnu.org/licenses/gpl-3.0.fr.html
@@ -10,7 +10,7 @@ servers:
 - url: http://waak.ddns.net/api
 tags:
 - name: account
-- name: sftp_server
+- name: ftps_server
 - name: auth
 paths:
   /account:
@@ -87,11 +87,11 @@ paths:
         500:
           description: internal server error
           content: {}
-  /sftp_server:
+  /ftps_server:
     get:
       tags:
-      - sftp_server
-      summary: Get list of SFTP servers
+      - ftps_server
+      summary: Get list of FTPS servers
       operationId: ""
       responses:
         200:
@@ -102,15 +102,15 @@ paths:
           content: {}
     post:
       tags:
-      - sftp_server
-      summary: Create SFTP server
+      - ftps_server
+      summary: Create FTPS server
       operationId: ""
       requestBody:
-        description: SFTP Server object to create
+        description: FTPS Server object to create
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/SftpServer'
+              $ref: '#/components/schemas/FtpsServer'
         required: true
       responses:
         201:
@@ -119,17 +119,17 @@ paths:
         500:
           description: internal server error
           content: {}
-      x-codegen-request-body-name: SftpServer
-  /sftp_server/{serverId}:
+      x-codegen-request-body-name: FtpsServer
+  /ftps_server/{serverId}:
     get:
       tags:
-      - sftp_server
-      summary: Get SFTP server by server ID
+      - ftps_server
+      summary: Get FTPS server by server ID
       operationId: ""
       parameters:
       - name: serverId
         in: path
-        description: ID of SFTP server to return
+        description: ID of FTPS server to return
         required: true
         schema:
           type: integer
@@ -143,13 +143,13 @@ paths:
           content: {}
     delete:
       tags:
-      - sftp_server
-      summary: Delete SFTP server
+      - ftps_server
+      summary: Delete FTPS server
       operationId: ""
       parameters:
       - name: serverId
         in: path
-        description: ID of SFTP server to delete
+        description: ID of FTPS server to delete
         required: true
         schema:
           type: integer
@@ -225,8 +225,8 @@ components:
         servers:
           type: array
           items:
-            $ref: '#/components/schemas/SftpServer'
-    SftpServer:
+            $ref: '#/components/schemas/FtpsServer'
+    FtpsServer:
       type: object
       properties:
         _id:
